# AprilAlgo

./: .cursorignore  .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  BACKLOG.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  DOC_ALIGNMENT.md  DOC_CONSOLIDATION_PLAN.md  HANDOFF.md  LICENSE  PROJECT_STATE.md  README.md  TEST_DIAGNOSTIC_REPORT.md  main.py  pyproject.toml  tests.md
.streamlit/: config.toml
configs/: default.yaml  smoke_backtest.yaml  smoke_backtest_ml.yaml
configs/ml/: default.yaml  meta_train_smoke.yaml  regime_groupby_smoke.yaml
docs/: DATA_SCHEMA.md  LEARNING.md  MODEL_ROUTING.md  REPO_ANALYSIS.md  SESSION_HANDOFF.md  TRIPLE_BARRIER_MATH.md
docs/archive/: REPO_ANALYSIS.md
scripts/: fetch_data.py
src/aprilalgo/: __init__.py  cli.py  config.py  streamlit_app.py
src/aprilalgo/backtest/: __init__.py  engine.py  logger.py  metrics.py  metrics_v2.py  portfolio.py  portfolio_runner.py  position_sizer.py  trade.py
src/aprilalgo/confluence/: __init__.py  probability.py  scorer.py  timeframe_aligner.py
src/aprilalgo/data/: __init__.py  bars.py  fetcher.py  loader.py  resampler.py  store.py  universe.py
src/aprilalgo/indicators/: __init__.py  bollinger.py  demark.py  descriptor.py  ehlers.py  hurst.py  pv_sequences.py  registry.py  rsi.py  sma.py  tmi.py  volume_trend.py
src/aprilalgo/labels/: __init__.py  meta_label.py  targets.py  triple_barrier.py
src/aprilalgo/meta/: __init__.py  regime.py
src/aprilalgo/ml/: __init__.py  cv.py  evaluator.py  explain.py  features.py  importance.py  meta_bundle.py  oof.py  pipeline.py  sampling.py  trainer.py
src/aprilalgo/reporting/: __init__.py  report.py
src/aprilalgo/strategies/: __init__.py  base.py  configurable.py  demark_confluence.py  ml_strategy.py  rsi_sma.py
src/aprilalgo/tuner/: __init__.py  analyzer.py  grid.py  ml_walk_forward.py  runner.py  walk_forward.py
src/aprilalgo/ui/: __init__.py  app.py  helpers.py
src/aprilalgo/ui/pages/: charts.py  dashboard.py  model_lab.py  model_metrics.py  model_trainer.py  portfolio_lab.py  regime_lab.py  signals.py  tuner.py  walk_forward_lab.py
src/aprilalgo/ui/pages/charts/: __init__.py  figure.py  page.py
src/aprilalgo/ui/pages/charts/data/: __init__.py  ml_artifacts.py
src/aprilalgo/ui/pages/charts/layers/: __init__.py  demark_counts.py  ml_proba.py  overlays.py  panels.py  shap_local.py
tests/: test_backtest.py  test_charts_ml_artifacts.py  test_charts_page_helpers.py  test_cli_bars.py  test_cli_helpers.py  test_cli_internals.py  test_cli_ml.py  test_config.py  test_confluence.py  test_confluence_probability.py  test_confluence_timeframe_aligner.py  test_cv.py  test_data_bars.py  test_data_fetcher.py  test_data_loader_edges.py  test_data_resampler.py  test_data_store.py  test_data_universe.py  test_demark_counts_layer.py  test_evaluator.py  test_features.py  test_importance.py  test_indicators.py  test_labels.py  test_loader_ml_bars.py  test_logger.py  test_meta_bundle.py  test_meta_label.py  test_metrics_v2.py  test_ml_artifacts_helpers.py  test_ml_strategy.py  test_ml_strategy_unit.py  test_ml_walk_forward.py  test_oof.py  test_pipeline_bootstrap.py  test_portfolio_runner.py  test_position_sizer.py  test_regime.py  test_regime_pipeline_eval.py  test_reporting.py  (+10 more)
tests/fixtures/daily_data/: TEST_daily.csv
tests/ui/: __init__.py  test_app_navigation.py  test_chart_layers.py  test_charts_page_app.py  test_dashboard_app.py  test_portfolio_model_pages.py  test_signals_app.py  test_tuner_app.py  test_walk_forward_lab_app.py
tests/ui/apps/: __init__.py  charts_smoke.py  dash_idle.py  dash_no_data.py  dash_run_success.py  model_lab_mocked.py  model_metrics_mocked.py  model_trainer_mocked.py  portfolio_lab_fixture.py  signals_no_data.py  signals_with_data.py  tuner_run_mocked.py  tuner_smoke.py  walk_forward_err.py  walk_forward_mocked.py
