[project]
name = "aprilalgo"
version = "0.5.0"
description = "Modular multi-timeframe backtester: confluence, XGBoost ML, sampling/OOF/meta-label/regime routing, walk-forward tuner, SHAP, Streamlit UI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "massive>=2.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.48.0",
    "streamlit>=1.56.0",
    "streamlit-plotly-events>=0.0.6",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
hmm = [
    "hmmlearn>=0.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aprilalgo"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
